2011-03-08  Alejandro G. Castro  <alex@igalia.com>

        Unreviewed, fixed GTK+ compilation after r80569.

        * UIProcess/gtk/WebView.cpp:
        (WebKit::WebView::windowToScreen):
        * UIProcess/gtk/WebView.h:

2011-03-08  Chris Fleizach  <cfleizach@apple.com>

        Reviewed by Sam Weinig.

        WK2: Cannot set focus on an element when focus is outside of WKView
        https://bugs.webkit.org/show_bug.cgi?id=55281

        * UIProcess/API/mac/PageClientImpl.h:
        * UIProcess/API/mac/PageClientImpl.mm:
        (WebKit::PageClientImpl::setFocus):
        * UIProcess/API/qt/qwkpage_p.h:
        (QWKPagePrivate::setFocus):
        * UIProcess/PageClient.h:
        * UIProcess/WebPageProxy.cpp:
        (WebKit::WebPageProxy::setFocus):
        * UIProcess/WebPageProxy.h:
        * UIProcess/WebPageProxy.messages.in:
        * UIProcess/win/WebView.h:
        (WebKit::WebView::setFocus):
        * WebProcess/WebCoreSupport/WebChromeClient.cpp:
        (WebKit::WebChromeClient::focus):
        (WebKit::WebChromeClient::unfocus):

2011-03-08  Jeff Miller  <jeffm@apple.com>

        Unreviewed, fix last change so WKBaseWin.h is in alphabetical order in the project XML.

        * win/WebKit2.vcproj: Move WKBaseWin.h to be in alphabetical order.

2011-03-08  Jeff Miller  <jeffm@apple.com>

        Reviewed by Darin Adler.

        Remove Source/WebKit2/UIProcess/API/C/win/WKBaseWin.h
        https://bugs.webkit.org/show_bug.cgi?id=55952

        * UIProcess/API/C/win/WKBaseWin.h: Removed.
        * win/WebKit2.vcproj: Refer to the Shared version of WKBaseWin.h instead of the one in UIProcess.

2011-03-08  Alejandro G. Castro  <alex@igalia.com>

        Reviewed by Martin Robinson.

        [GTK] Add new files to compilation after r77974
        https://bugs.webkit.org/show_bug.cgi?id=54076

        The commit added new code to allow passing context to policy
        delegate methods, we also added dummy ResourceRequest and